hide empty task when this is not empty

--- a/templates/project/layout/content.html
+++ b/templates/project/layout/content.html
@@ -547,7 +547,7 @@
                                                             </div>
                                                         </div>
                                                     {% endfor %}
-                                                    <div class="empty-task {% if task %}d-none{% endif %}">
+                                                    <div class="empty-task {% if task_list %}d-none{% endif %}">
                                                         <img src="{% static 'img/clipboard.svg' %}"
                                                              alt="no researcher" height="100px"
                                                              class="rounded-0 m-auto">
