--- a/researcher/templates/researcher/index.html
+++ b/researcher/templates/researcher/index.html
@@ -233,7 +233,8 @@
                                                 </button>
                                             </a>
                                         {% else %}
-                                            <button type="button" class="default-btn preview-project" id="{{ project.PK }}"
+                                            <button type="button" class="default-btn preview-project"
+                                                    id="{{ project.PK }}"
                                                     data-toggle="modal" data-target="#showProject">
                                                 مشاهده
                                             </button>
