--- a/industry/templates/industry/userInfo.html
+++ b/industry/templates/industry/userInfo.html
@@ -361,7 +361,14 @@
                             <div class="box-body">
                                 <div class="row">
                                     <div class="col-lg-12 text-right">
-                                        <p></p>
+                                        <p class="font-weight-normal">
+                                            برای اتصال حساب کاربری به خود به بات تلگرامی
+                                            <a href="https://telegram.me/ChamranTeam_bot" class="link-with-icon telegram">
+                                                <i class="fab fa-telegram-plane"></i>
+                                                <span class="dir-ltr text-left">ChamranTeam_bot@</span>
+                                            </a>
+                                            ، کد زیر را برای بات ارسال کنید.
+                                        </p>
                                         <div class="row dir-ltr">
                                             <div class="col-lg-4 offset-lg-4">
                                                 <div class="form-group text-center">
