--- a/researcher/templates/researcher/userInfo.html
+++ b/researcher/templates/researcher/userInfo.html
@@ -466,9 +466,9 @@
                                     <div class="col-lg-12 text-right">
                                         <p class="font-weight-normal">
                                             برای اتصال حساب کاربری به خود به بات تلگرامی
-                                            <a href="https://telegram.me/ChamranTeam_bot">
+                                            <a href="https://telegram.me/ChamranTeam_bot" class="link-with-icon telegram">
                                                 <i class="fab fa-telegram-plane"></i>
-                                                <span>@ChamranTeam_bot</span>
+                                                <span class="dir-ltr text-left">ChamranTeam_bot@</span>
                                             </a>
                                             ، کد زیر را برای بات ارسال کنید.
                                         </p>
