change expert label in signup card

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -133,7 +133,7 @@
                                               data-old_color="#000000"></path>
                                     </g>
                                 </svg>
-                                <span>استاد</span>
+                                <span>عضو هیئت علمی</span>
                             </label>
                             <input class="d-none" type="radio" name="account_type" id="industry" value="industry"
                                    required>
